--- a/07_kotlin_app/build.gradle
+++ b/07_kotlin_app/build.gradle
@@ -17,4 +17,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':07_kotlin_lesson')
     implementation project(':07_kotlin_base')
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
